<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.login.LoginFragment">

    <TextView
        android:id="@+id/textView_email_label"
        style="@style/labels_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin_m"
        android:layout_marginTop="@dimen/layout_margin_m"
        android:text="@string/email_tx"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin_m"
        android:layout_marginTop="@dimen/layout_margin_m"
        android:layout_marginEnd="@dimen/layout_margin_m"
        android:hint="@string/hint_email_editText"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="@dimen/min_height_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_email_label" />

    <TextView
        android:id="@+id/textView_password_label"
        style="@style/labels_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin_m"
        android:layout_marginTop="@dimen/layout_margin_l"
        android:text="@string/password_tx"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_editText" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin_m"
        android:layout_marginTop="@dimen/layout_margin_m"
        android:layout_marginEnd="@dimen/layout_margin_m"
        android:hint="@string/hint_password_editText"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="@dimen/min_height_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_password_label" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin_ll"
        android:layout_marginTop="@dimen/layout_margin_ll"
        android:text="@string/btn_login"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_editText" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin_m"
        android:layout_marginEnd="@dimen/layout_margin_m"
        android:text="@string/btn_signup"
        app:layout_constraintBaseline_toBaselineOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/login_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>