<?xml version="1.0" encoding="utf-8"?>

<!--        using constraint layout for complex views with flat hierarchy for better performance -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.welcome.WelcomeFragment">

    <TextView
        android:id="@+id/welcome_text"
        style="@style/labels_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin_m"
        android:layout_marginEnd="@dimen/layout_margin_m"
        android:text="@string/welcome_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/welcome_txt2"
        style="@style/labels_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin_m"
        android:layout_marginEnd="@dimen/layout_margin_m"
        android:text="@string/welcome_txt2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/nav_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_btn_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/welcome_txt2"
        app:layout_constraintStart_toStartOf="@+id/welcome_txt2"
        app:layout_constraintTop_toBottomOf="@+id/welcome_txt2" />

</androidx.constraintlayout.widget.ConstraintLayout>